Header and image gallery components added. Basic SASS added to get them in roughly the right place relative to each other.

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-      Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+      <!-- Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
 
   Download v1.3
   What is it?
@@ -51,7 +51,7 @@
   Experience more together
   Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
 
-  Download v1.3
+  Download v1.3 -->
 
   </body>
 </html>
